--- a/vd.html
+++ b/vd.html
@@ -140,7 +140,7 @@
   </div>
 
   <div class="home-button">
-    <button onclick="location.href='file:///C:/Users/Alok/Desktop/Webpage/index.html'">
+    <a class="box-link" href="https://drive.google.com/file/d/1kYMRD_9rb6vGXLsnZghjKt-DGuRMTb8A/view?usp=drive_link" target="_blank">
       <i class="fas fa-home"></i> Home
     </button>
   </div>
