--- a/VD.html
+++ b/VD.html
@@ -124,7 +124,7 @@
       </div>
     </a>
 
-    <a class="box-link" href="file:///C:/Users/Alok/Desktop/Webpage/VD%20Feature%20Videos.html">
+    <a class="box-link" href="https://drive.google.com/file/d/1kYMRD_9rb6vGXLsnZghjKt-DGuRMTb8A/view?usp=drive_link" target="_blank">
       <div class="box feature-videos">
         <i class="fas fa-video"></i>
         Feature Demo Videos
@@ -140,7 +140,7 @@
   </div>
 
   <div class="home-button">
-    <a class="box-link" href="https://drive.google.com/file/d/1kYMRD_9rb6vGXLsnZghjKt-DGuRMTb8A/view?usp=drive_link" target="_blank">
+    <button onclick="location.href='file:///C:/Users/Alok/Desktop/Webpage/index.html'">
       <i class="fas fa-home"></i> Home
     </button>
   </div>
