--- a/da.html
+++ b/da.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Visual Display (VD)</title>
+  <title>Digital Appliances (DA)</title>
   <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
@@ -67,8 +67,8 @@
 
     .sales-talk { background-color: #e8f0fe; }
     .benchmarking { background-color: #e0f7fa; }
-    .demo-content { background-color: #fce4ec; }
-    .feature-videos { background-color: #e8f5e9; }
+    .one-pager { background-color: #fce4ec; }
+    .top-reasons { background-color: #e8f5e9; }
     .product-info { background-color: #fff3e0; }
 
     .box-link {
@@ -100,38 +100,38 @@
 </head>
 <body>
 
-  <header><span>Visual Display (VD)</span></header>
+  <header><span>Digital Appliances (DA)</span></header>
 
   <div class="container">
-    <a class="box-link" href="https://drive.google.com/drive/folders/1Q-RWCIKRMeHXOgt-BAmcs6WtybqIGK52?usp=drive_link" target="_blank">
+    <a class="box-link" href="https://drive.google.com/drive/folders/1ftALVIVRgkcXO4blf4I-N5nOsyX7i4uq?usp=drive_link" target="_blank">
       <div class="box sales-talk">
         <i class="fas fa-comments"></i>
         Sales Talk
       </div>
     </a>
 
-    <a class="box-link" href="https://drive.google.com/drive/folders/1aSWNVmga374E8yhS_EuefqN-QEW4iglk?usp=drive_link" target="_blank">
+    <a class="box-link" href="https://drive.google.com/drive/folders/1gsSzL8NgdG3ZKFeV4pPpPCULPGMB6ZhH?usp=drive_link" target="_blank">
       <div class="box benchmarking">
         <i class="fas fa-chart-line"></i>
         Competition Benchmarking
       </div>
     </a>
 
-    <a class="box-link" href="https://drive.google.com/drive/folders/19uHBAP2ZpkrW7duVLez2Z5_5uLVFFaN-?usp=drive_link" target="_blank">
-      <div class="box demo-content">
-        <i class="fas fa-play-circle"></i>
-        Demo Content
+    <a class="box-link" href="https://drive.google.com/drive/folders/1j9x1x3_RXH2mYzDPCmSdOWaCD7a1VqBf?usp=drive_link" target="_blank">
+      <div class="box one-pager">
+        <i class="fas fa-file-alt"></i>
+        DA One Pager
       </div>
     </a>
 
-    <a class="box-link" href="file:///C:/Users/Alok/Desktop/Webpage/vdvideos.html">
-      <div class="box feature-videos">
-        <i class="fas fa-video"></i>
-        Feature Demo Videos
+    <a class="box-link" href="https://drive.google.com/drive/folders/1cJf3vLZH05-XRIjI4V5eiKK1D9PQo1aH?usp=drive_link" target="_blank">
+      <div class="box top-reasons">
+        <i class="fas fa-star"></i>
+        Top Reasons to Buy
       </div>
     </a>
 
-    <a class="box-link" href="https://drive.google.com/drive/folders/15vGkkfzGZMVcbYZHhh1Cg1Re4GEVz7UT?usp=drive_link" target="_blank">
+    <a class="box-link" href="https://drive.google.com/drive/folders/1YXkzlFuCc_CKUFjTGggD2jNbPItxzca5?usp=drive_link" target="_blank">
       <div class="box product-info">
         <i class="fas fa-box"></i>
         Product Information
