--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
   <h1>SEC Reference Desk</h1>
   <div style="height: 5em;"></div>
   <div class="container">
-    <a href="vd.html" style="text-decoration: none; color: inherit;">
+    <a href="VD.html" style="text-decoration: none; color: inherit;">
       <div class="box box-vd">
         <img src="https://img.icons8.com/ios/500/tv.png" alt="TV Sketch">
         <div class="label">Visual Display<br>(VD)</div>
       </div>
     </a>
-    <a href="da.html" style="text-decoration: none; color: inherit;">
+    <a href="DA.html" style="text-decoration: none; color: inherit;">
       <div class="box box-da">
         <img src="https://img.icons8.com/ios/500/kitchen-room.png" alt="Digital Appliance Sketch">
         <div class="label">Digital Appliances<br>(DA)</div>
