--- a/VD.html
+++ b/VD.html
@@ -124,7 +124,7 @@
       </div>
     </a>
 
-    <a class="box-link" href="file:///C:/Users/Alok/Desktop/Webpage/vdvideos.html">
+    <a class="box-link" href="vdvideos.html">
       <div class="box feature-videos">
         <i class="fas fa-video"></i>
         Feature Demo Videos
