--- a/vdvideos.html
+++ b/vdvideos.html
@@ -138,8 +138,8 @@
   </div>
 
  <div class="sticky-buttons">
-  <button onclick="location.href='file:///C:/Users/Alok/Desktop/Webpage/vd.html'">← Back</button>
-  <button onclick="location.href='file:///C:/Users/Alok/Desktop/Webpage/index.html'">🏠 Home</button>
+  <button onclick="location.href='vd.html'">← Back</button>
+  <button onclick="location.href='index.html'">🏠 Home</button>
 </div>
 </body>
 </html>
