--- a/vdvideos.html
+++ b/vdvideos.html
@@ -138,7 +138,7 @@
   </div>
 
  <div class="sticky-buttons">
-  <button onclick="location.href='vd.html'">← Back</button>
+  <button onclick="location.href='VD.html'">← Back</button>
   <button onclick="location.href='index.html'">🏠 Home</button>
 </div>
 </body>
