--- a/DA.html
+++ b/DA.html
@@ -140,7 +140,7 @@
   </div>
 
   <div class="home-button">
-    <button onclick="location.href='file:///C:/Users/Alok/Desktop/Webpage/index.html'">
+    <button onclick="location.href='index.html'">
       <i class="fas fa-home"></i> Home
     </button>
   </div>
